src/server/run/snapshots/annonars__server__run__versions__test__deserialize_spec_yaml@gnomad-mtdna-grch38-3.1+0.33.0-2.snap
---
source: src/server/run/versions.rs
expression: "&proto_spec"
---
identifier: "annonars/seqvars/gnomad-mtdna:3.1+0.33.0-grch38"
title: annonars gnomAD-mtDNA RocksDB Database
creator: gnomAD Team
contributor:
  - VarFish Developer Teams
format: application/x-rocksdb
date: "20240105"
version: 3.1+0.33.0
genomeRelease: grch38
description: "RocksDB with the information from gnomAD mtDNA v3.1 converted with\nannonars v0.33.0 in varfish-downloader v0.3.1.dev42+g3a332a0.d20240105.\n"
source:
  - "PMID:32461654"
  - "https://gnomad.broadinstitute.org/"
createdFrom:
  - name: gnomAD-mtDNA
    version: "3.1"
